--- a/pom.xml
+++ b/pom.xml
@@ -275,7 +275,24 @@ of testing facilities designed for use with TestNG (http://testng.org/), so it's
         </plugins>
     </build>
 
-    <repositories>      
+    <repositories>
+        <repository>
+                <id>devlab722-repo</id>
+                <url>http://nexus.devlab722.net/nexus/content/repositories/releases
+                </url>
+                <snapshots>
+                    <enabled>false</enabled>
+                </snapshots>
+            </repository>
+
+            <repository>
+                <id>devlab722-snapshot-repo</id>
+                <url>http://nexus.devlab722.net/nexus/content/repositories/snapshots
+                </url>
+                <releases>
+                    <enabled>false</enabled>
+                </releases>
+            </repository>
     </repositories>
 
     <pluginRepositories>
@@ -305,7 +322,7 @@ of testing facilities designed for use with TestNG (http://testng.org/), so it's
 -->
 
     <properties>
-        <tapestry-release-version>5.3.4</tapestry-release-version>
+        <tapestry-release-version>5.4-beta-3</tapestry-release-version>
         <servlet-api-release-version>2.5</servlet-api-release-version>
         <testng-release-version>5.14.9</testng-release-version>
         <easymock-release-version>3.0</easymock-release-version>
